src/test/deca/context/invalid/created/appel_meth/appel_sur_null.deca
// Description :
//   	appel d'une methode sur un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : (3.71) Le membre gauche n'est pas de type 'class'

{
null.met();
}